# MyRepertoirApp

./: .flutter-plugins-dependencies  .gitignore  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  RELEASE_WORKFLOW.md  build.gradle.kts  l10n.yaml  local.properties  pubspec.yaml  reported_bugs_and_issues.txt  settings.gradle.kts  soundtorch_integration_steps.txt  version.json
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.github/.workflows/: update-contributors.yml
.github/workflows/: build_and_release.yml  deploy-pages.yml  flutter-ci.yml  maintenance.yml  manual-build.yml  nightly.yml  release.yml  update-contributors.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  SoundTouch.h  soundtouch_jni.cpp
app_fdroid/: pubspec.yaml
app_fdroid/lib/: main.dart
app_fdroid/linux/: CMakeLists.txt
app_fdroid/web/: index.html  manifest.json
app_fdroid/windows/: CMakeLists.txt
app_playstore/: pubspec.yaml
app_playstore/android/: build.gradle.kts
app_playstore/lib/: main.dart
assets/: contributors.json
docs/: CONTRIBUTING.md  INSTALL.md  TRANSLATIONS.md  index.html  privacy.html
lib/: main.dart
linux/: CMakeLists.txt
test/: database_helper_test.dart  locale_notifier_test.dart  localization_test.dart  model_tests.dart  widget_test.dart
web/: index.html  manifest.json
windows/: .gitignore  CMakeLists.txt
(+263 files in other folders)
